# platform_external_gst_glib

./: .gitignore  Android.mk  autogen.sh  configure.ac  glib-2.0.pc.in
gio/: Makefile.am  ginetaddress.c  glocalfileinfo.c  gresolver.c  gsocketclient.c  gthreadedresolver.c  gtlscertificate.h  gunixresolver.c
gio/libasyncns/: asyncns.c
glib/: Makefile.am  gatomic.c  gconvert.c  gi18n.h  glibintl.h  gmessages.c  gregex.c  gstrfuncs.c  gunicollate.c  gutf8.c  gutils.c
glib/gnulib/: Makefile.am
glib/libcharset/: Makefile.am
gmodule/: Makefile.am
gobject/: Makefile.am  gparamspecs.c
gthread/: Makefile.am  gthread-posix.c
